getting back to busines

--- a/todo
+++ b/todo
@@ -8,3 +8,7 @@
 [ ] find interested words ("yesss" vs "yes")
 
 [ ] get_most_common_words - multiple_lines
+
+[ ] words per conversation
+
+[ ] graph hpm * 100
